add level switching

--- a/BeatSaber99Client/BeatSaber99Client.csproj
+++ b/BeatSaber99Client/BeatSaber99Client.csproj
@@ -197,14 +197,18 @@
     <Compile Include="Client.cs" />
     <Compile Include="ClientStatus.cs" />
     <Compile Include="Executor.cs" />
+    <Compile Include="Gameplay.cs" />
     <Compile Include="HarmonyPatches.cs" />
+    <Compile Include="Jukebox.cs" />
     <Compile Include="LevelLoader.cs" />
     <Compile Include="Packets\ConnectionPacket.cs" />
+    <Compile Include="Packets\EnqueueSongPacket.cs" />
     <Compile Include="Packets\IPacket.cs" />
     <Compile Include="Packets\PlayersLeftPacket.cs" />
     <Compile Include="Packets\SessionState.cs" />
     <Compile Include="Packets\StartPacket.cs" />
     <Compile Include="Plugin.cs" />
+    <Compile Include="PreloadedLevel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\ExampleViewController.cs" />
     <Compile Include="UI\PluginUI.cs" />
