--- a/BeatSaber99Client/manifest.json
+++ b/BeatSaber99Client/manifest.json
@@ -1,7 +1,7 @@
 {
   "author": "Guad#8302",
   "description": [
-    "Beat Saber 99 is a Battle Royale-like gamemode for Beat Saber. You can join a match and battle it out with other 99 players, in real time."
+    "Beat Saber 99 is a Battle Royale-like gamemode for Beat Saber. You can join a match and battle it out with other 99 players, in real time. Use defensive items to your advantage and offensive items to hinder your opponents. Achieve the victory royale by being the last one swinging."
   ],
   "gameVersion": "1.9.0",
   "id": null,
@@ -12,6 +12,6 @@
   "links": {
     "project-home": "https://example.com/demo-plugin",
     "project-source": "https://github.com/exampleman/demo-plugin/",
-    "donate": ""
+    "donate": "https://example.com/demo-plugin"
   }
 }
