--- a/BeatSaber99Client/manifest.json
+++ b/BeatSaber99Client/manifest.json
@@ -11,7 +11,7 @@
     "BeatSaberMarkupLanguage": "^1.1.5"
   },
   "links": {
-    "project-home": "https://example.com/demo-plugin",
-    "project-source": "https://github.com/exampleman/demo-plugin/"
+    "project-home": "https://github.com/Guad/beatsaber99",
+    "project-source": "https://github.com/Guad/beatsaber99"
   }
 }
